[package]
name = "jeba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
env_logger = "0.10.0"
log = "0.4.20"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version ="1.0.190",features = ["derive"] }
serde_json = "1.0.107"
structopt = "0.3.26"
toml = "0.8.6"

[dev-dependencies]
clippy = "0.0.302"
